2016-03-02  Venkataramanan Kumar  <venkataramanan.kumar@amd.com>

	PR tree-optimization/68621
	* gcc.dg/tree-ssa/ifc-8.c: Adjust test.

2016-03-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/i386/pr70007.c: New test.

2016-03-01  Jeff Law  <law@redhat.com>

	PR tree-optimization/69196
	* gcc.dg/tree-ssa/pr69196.c: New test.

	PR tree-optimization/69196
	* gcc.dg/tree-ssa/vrp46.c: Twiddle threading params to keep it from
	duplicating code and spoiling the expected output.

2016-03-01  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/70033
	* gcc.target/powerpc/p9-lxvx-stxvx-1.c: Make sure compiler
	supports power9 before doing tests.
	* gcc.target/powerpc/p9-lxvx-stxvx-2.c: Likewise.
	* gcc.target/powerpc/p9-lxvx-stxvx-3.c: Likewise.
	* gcc.target/powerpc/p9-permute.c: Likewise.

2016-03-01  Uros Bizjak  <ubizjak@gmail.com>

	PR target/70027
	* gcc.target/i386/pr70027.c: New test.

2016-03-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/pr70017.c: New test.

2016-03-01  Jakub Jelinek  <jakub@redhat.com>

	PR c/69796
	PR c/69974
	* gcc.dg/pr69796.c: New test.
	* gcc.dg/pr69974.c: New test.

2016-03-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/stack_usage3.adb: Robustify and enable for all targets.

2016-02-29  Jeff Law  <law@redhat.com>

	PR tree-optimization/69987
	* gfortran.dg/pr69987.f90: New test.

	PR tree-optimization/69989
	* gcc.c-torture/compile/pr69989-2.c: New test.

2016-03-01  Marek Polacek  <polacek@redhat.com>

	PR c++/69795
	* g++.dg/parse/invalid1.C: New test.

2016-03-01  Richard Biener  <rguenther@suse.de>

	PR middle-end/70022
	* gcc.dg/pr70022.c: New testcase.

2016-03-01  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR tree-optimization/69956
	* gcc.dg/pr69956.c: New test.

2016-02-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/70011
	* gcc.dg/vect/costmodel/ppc/costmodel-fast-math-vect-pr299925.c:
	XFAIL when hardware supports efficient unaligned storage access.
